# MTS_TrueTechChamp

./: .gitignore  compile_commands.json
task1/: compile_commands.json  demo.py  move.py  slam.py
task1/.cache/clangd/index/: address.hpp.136111DE33FFD500.idx  address.ipp.4754B6ACC6A582EB.idx  address_v4.hpp.C1159B009463D962.idx  address_v4_iterator.hpp.C4A9DBDB2377FE47.idx  address_v4_range.hpp.1629DE6434889D89.idx  allocator.hpp.1C3B907C25A31B05.idx  any_completion_executor.ipp.72709763843CF5C3.idx  any_io_executor.hpp.677869F4776F7B60.idx  any_io_executor.ipp.94E271D95475ED3E.idx  append.hpp.077A7BFF72F5655A.idx  array.hpp.759CD48097935870.idx  as_tuple.hpp.1D4593804ED80794.idx  as_tuple.hpp.71B10B5C3207B05F.idx  asio.hpp.17EAB1A3939B716F.idx  associated_allocator.hpp.D19B318F5B04D842.idx  async_result.hpp.4B54C293536DBD8B.idx  atomic_count.hpp.6AF231C278E78041.idx  awaitable.hpp.28C2E0BB160AF917.idx  bad_address_cast.hpp.30ADBC217FDF355E.idx  bad_executor.hpp.7D0777FD4F2342B9.idx  bad_executor.ipp.3FA750253110489F.idx  base.hpp.766D94AFF9CC8280.idx  basic_datagram_socket.hpp.EB10F34A6C85C461.idx  basic_endpoint.hpp.450E028F06A72062.idx  basic_endpoint.hpp.6091DD92B5C77181.idx  basic_endpoint.hpp.94393C991E7A4021.idx  (+216 more)
task1/controllers/udp_diff/: udp_diff.py
task1/fake_navigation/: .gitignore  CMakeLists.txt  docker-compose.yml  grid_shader.fs  main.cpp  movement.cpp  movement.h  params.h  path.cpp  path.h  utils.cpp  utils.h
task1/opencv_tmp/tmp/: opencv_project-cfgcmd.txt  opencv_project-gitupdate.cmake  opencv_project-mkdirs.cmake
task1/solution_1/: Dockerfile  README.md  docker-compose.yml  main.cpp  movement.cpp  movement.h  params.h  path.cpp  path.h  utils.cpp  utils.h
task2/: README.md  make_maze.py
task2/controllers/udp_diff/: udp_diff.py
task2/fake_navigation/: grid_shader.fs  main.cpp  movement.cpp  params.h  path.cpp  utils.cpp  utils.h
task2/protos/: CobraFlex.proto  GeneratedCones.proto  GeneratedMaze.proto  TrafficCone.proto
task2/solution_wavefront/: CMakeLists.txt  docker-compose.yml  grid_shader.fs  main.cpp  movement.cpp  params.h  path.h  utils.cpp
task2/worlds/: cobra_flex_demo.wbt
task3/: README.md  demo.py  docker-compose.yml  version.py
task3/controllers/udp_diff/: udp_diff.py
task3/fake_navigation/: README.md  grid_shader.fs  main.cpp  movement.cpp  path.cpp
task3/protos/: CobraFlex.proto  PlatformFloor.proto
task3/protos/meshes/: platform.stl
task3/reveive example/: receiver_rgbd.py
task3/worlds/: .cobra_flex_demo.wbproj  cobra_flex_demo.wbt
(+345 files in other folders)
